force-app/main/default/objects/Form_Builder__FormTitanPdfUrl__c/fields/Form_Builder__ApiKey__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__ApiKey__c</fullName>
    <description>Add Api key In order to enable debug mode</description>
    <inlineHelpText>Add Api key In order to enable debug mode</inlineHelpText>
    <label>ApiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>