force-app/main/default/objects/Form_Builder__FormTitanPdfUrl__c/fields/Form_Builder__Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>