force-app/main/default/objects/Form_Builder__FormTitanPdfUrl__c/fields/Form_Builder__URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__URL__c</fullName>
    <description>This will determine the user specific formtitan url</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>