force-app/main/default/objects/Form_Builder__FormTitanPdfUrl__c/fields/Form_Builder__Use_File_App__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Use_File_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use File App</label>
    <type>Checkbox</type>
</CustomField>